mydata/portal-f/portal-f-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-f
  namespace: beast
spec:
  selector:
    app: portal-f
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
